--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UOCIFY</title>
+    <title>UOCIFY - Buscador</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600;700;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ebac1cb562.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    
+    <h1 >UOCIFY</h1>
+    <i class="fas fa-search"></i>
+    <i class="fas fa-chevron-righth"></i>
+    <i class="fas fa-user"></i>
 </body>
 </html>
