--- a/index.html
+++ b/index.html
@@ -1,18 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UOCIFY - Buscador</title>
 
+    <!-- CSS Google Font Spartan  -->
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;600;700;900&display=swap" rel="stylesheet">
+
+    <!-- CSS Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- CSS UOCIFY -->
+    <link href="css/styles.css" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+    <!-- JS Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <!-- FontAwsome -->
     <script src="https://kit.fontawesome.com/ebac1cb562.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
-    <h1 >UOCIFY</h1>
-    <i class="fas fa-search"></i>
-    <i class="fas fa-chevron-righth"></i>
-    <i class="fas fa-user"></i>
+
+    <!-- CABECERA -->
+    <header class="container-fluid">
+        <div class="row">
+          <div class="col-sm-1">
+            <a href="/"><img src="images/uocify_logo.svg" alt="Logo UOCIFY" class="logo-cabecera" /></a>
+          </div>
+          <div class="col-sm-10">
+
+            <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+            <div class="input-group mb-2 mr-sm-2">
+              <div class="input-group-prepend">
+                <div class="input-group-text"><i class="fas fa-search"></i></div>
+              </div>
+              <input type="text" class="form-control" placeholder="the beatles">
+            </div>
+
+          </div>
+          <div class="col-sm-1">
+              Matias
+            <i class="fas fa-user"></i>
+          </div>
+        </div>
+    </header>
+  
+    <!-- CUERPO -->
+    <div class="container">
+
+        <h1>Resultados de <span>the beatles</span></h1>
+
+        <!-- TABS -->
+        <ul class="nav nav-tabs" id="tabContenedor" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a href="#panelTodo" class="nav-link active" id="tabTodo" data-toggle="tab">Todo</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a href="#panelCanciones" class="nav-link" id="tabCanciones" data-toggle="tab">Canciones</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a href="#panelAlbumes" class="nav-link"id="tabAlbumes" data-toggle="tab">Álbumes</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="#panelArtistas" class="nav-link" id="tabArtistas" data-toggle="tab">Artistas</a>
+              </li>
+          </ul>
+
+          <!-- PANELES -->
+          <div class="tab-content" id="panelContenedor">
+                <!-- TAB-CONTENIDO TODO -->
+                <div class="tab-pane fade show active" id="panelTodo" role="tabpanel">...</div>
+                
+                <!--  TAB-CONTENIDO CANCIONES -->
+                <div class="tab-pane fade" id="panelCanciones" role="tabpanel">CANCIONES</div>
+
+                <!--  TAB-CONTENIDO ALBUMES -->
+                <div class="tab-pane fade" id="panelAlbumes" role="tabpanel">ALBUMES</div>
+
+                <!--  TAB-CONTENIDO ARTISTAS -->
+                <div class="tab-pane fade" id="panelArtistas" role="tabpanel">ARTISTAS</div>
+
+            </div>
+    </div>
+
+    <i class="fas fa-chevron-right"></i>
+    
 </body>
 </html>
