--- a/index.html
+++ b/index.html
@@ -74,7 +74,39 @@
           <!-- PANELES -->
           <div class="tab-content" id="panelContenedor">
                 <!-- TAB-CONTENIDO TODO -->
-                <div class="tab-pane fade show active" id="panelTodo" role="tabpanel">...</div>
+                <div class="tab-pane fade show active" id="panelTodo" role="tabpanel">
+
+                    <div class="row mb-4">
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>                    
+                    </div>
+                  
+                    <div class="row mb-4">
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>
+                      <div class="col-sm-12 col-md-3">
+                        <img src="images/artists/beatles-fan-club.jpg" class="img-fluid">
+                      </div>                    
+                    </div>
+ 
+                </div>
                 
                 <!--  TAB-CONTENIDO CANCIONES -->
                 <div class="tab-pane fade" id="panelCanciones" role="tabpanel">CANCIONES</div>
